# blackbird

./: .gitignore  CMakeLists.txt  blackbird.code-workspace  blackbird.conf
src/: BlackBird.cpp  BlackBird.h  Dico.cpp  Dico.h  Feeder.cpp  Feeder.h  ITimeTriggeredEvent.h  Instrument.cpp  Instrument.h  Limit.h  LiveSource.cpp  LiveSource.h  Market.h  TimeTriggeredManager.cpp  TimeTriggeredManager.h  Wallet.cpp  Wallet.h  bitcoin.cpp  bitcoin.h  check_entry_exit.cpp  check_entry_exit.h  curl_fun.cpp  db_fun.cpp  db_fun.h  instrument.h  main.cpp  parameters.cpp  parameters.h  result.cpp  result.h
src/exchanges/: Binance.cpp  Binance.h  Coinbase.cpp  Coinbase.h  Kraken.cpp  Kraken.h  binance.cpp  binance.h  kraken.cpp  kraken.h
src/indicator/: IIndicator.h  IndicatorFactory.cpp  IndicatorFactory.h  PerfIndicator.cpp  PerfIndicator.h
src/strategy/: PerfectArbitrageStrategy.cpp  PerfectArbitrageStrategy.h
src/utils/: StringUtil.cpp  StringUtil.h  hmac_sha512.hpp  restapi.cpp  restapi.h  send_email.cpp
test/: BinanceTest.cpp
